Added static analysis #1

--- a/VerifyRawSql.Test/VerifyRawSql.Test.csproj
+++ b/VerifyRawSql.Test/VerifyRawSql.Test.csproj
@@ -49,10 +49,12 @@
   </ItemGroup>
   <ItemGroup>
     <Content Include="TestingFile.cs" />
+    <Content Include="TestingStaticAnalyseFile.cs" />
     <Compile Include="VRSManagerTest.cs" />
     <Compile Include="Properties\AssemblyInfo.cs" />
   </ItemGroup>
   <ItemGroup>
+    <None Include="app.config" />
     <None Include="packages.config" />
   </ItemGroup>
   <ItemGroup>
