--- a/VerifyRawSql.Test/packages.config
+++ b/VerifyRawSql.Test/packages.config
@@ -1,5 +1,6 @@
 ﻿<?xml version="1.0" encoding="utf-8"?>
 <packages>
+  <package id="Microsoft.VisualStudio.Utilities" version="15.0.26201" targetFramework="net46" />
   <package id="MSTest.TestAdapter" version="1.1.11" targetFramework="net46" />
   <package id="MSTest.TestFramework" version="1.1.11" targetFramework="net46" />
 </packages>
